--- a/Shared (Extension)/Resources/_locales/en/messages.json
+++ b/Shared (Extension)/Resources/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
     "extension_name": {
-        "message": "netflix-subs-mp",
+        "message": "netflix-dual-subtitles",
         "description": "The display name for the extension."
     },
     "extension_description": {
-        "message": "This is netflix-subs-mp. You should tell us what your extension does here.",
+        "message": "This is netflix-dual-subtitles. You should tell us what your extension does here.",
         "description": "Description of what the extension does."
     }
 }
